[package]
authors = ["Simon Chan <cnsimonchan@live.com>"]
categories = ["data-structures", "encoding"]
description = "Macro to create bit field types with conditional fields"
edition = "2018"
keywords = ["bitfield"]
license = "MIT"
name = "cond_bit_field"
repository = "https://github.com/yume-chan/cond_bit_field"
version = "0.1.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = {version = "1.0", features = ["full", "extra-traits"]}
