[package]
authors = ["Simon Chan <cnsimonchan@live.com>"]
categories = ["data-structures", "encoding"]
description = "Macro to create bit field types with conditional fields"
edition = "2018"
keywords = ["bitfield"]
license = "MIT"
name = "cond_bit_stream"
repository = "https://github.com/yume-chan/cond_bit_field"
version = "0.1.0"

[dependencies]
thiserror = "1.0"

[dev-dependencies]
cond_bit_field = {path = "../cond_bit_field"}
