[package]
name = "derive_new_number"
version = "0.1.0"
authors = ["Simon Chan <cnsimonchan@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = {version = "1.0", features = ["full", "extra-traits", "clone-impls"]}
