[package]
authors = ["Simon Chan <cnsimonchan@live.com>"]
categories = ["encoding"]
description = "Parse H.264 NAL units"
edition = "2018"
keywords = ["h264"]
license = "MIT"
name = "h264-nalu"
repository = "https://github.com/yume-chan/cond_bit_field"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
cond_bit_stream = {path = "../cond_bit_stream"}
derive_new_number = {path = "../derive_new_number"}
thiserror = "1.0"
wasm-bindgen = "0.2"
js-sys = "0.3"
serde-wasm-bindgen = "0.1.3"
serde = { version = "1.0", features = ["derive"] }
