[package]
authors = ["Simon Chan <cnsimonchan@live.com>"]
edition = "2018"
name = "output"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit_stream = {path = "../bit_stream"}
cond_bit_field = {path = "../cond_bit_field"}
num-derive = "0.3"
num-traits = "0.2"
